--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,4 +49,5 @@ body {
 table {
     border-width: 3px !important;
     border-color: #ab0044 !important;
+    box-shadow: 0 0 15px 0px rgba(0, 0, 0, 0.3);
 }
